local uri added

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-MONGODB_URI=mongodb://mongo/coins_db
+MONGODB_URI=mongodb://mongo/employee_db
+MONGODB_URI_LOCAL=mongodb://127.0.0.1:27017/employee_db
